# awesome-games

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
asnake/: CMakeLists.txt
asnake/glad/include/glad/: gl.h
asnake/shaders/: food.fs  player.fs  title.fs
asnake/src/: asnake.c  build_info.h.in  collision.c  game.c  highscores.c  highscores.h  hud.c  hud.h  level.c  level.h  menu.c  menu.h  player.c  player.h  renderer.h  shader.h  text_renderer.c
asnake/src/shaders/: generic_object.fs  generic_object.vs  player.fs  text.vs  wall.fs
cmake/: x86_64-w64-mingw32.cmake
hoppspel/: CMakeLists.txt
hoppspel/resources/: sprites.c  sprites.h
hoppspel/shaders/: title.fs
hoppspel/src/: build_info.h.in  game.c  highscores.c  hud.c  level.c  level.h  level_selection.c  menu.c  player.c  sprite_renderer.c
lib/: CMakeLists.txt  collision.h  game.h  global.h  renderer.h  shader.h  sprite_renderer.h  text_renderer.h  texture.h  types.h  util.h
lib/cmake/: shader.cmake
lib/shaders/: sprite.fs  sprite.vs  text.fs
lib/src/: collision.c  global.c  physics.c  renderer.c  shader.c  shader.h  text_renderer.c  texture.c  util.h
next/: CMakeLists.txt
next/resources/: sprites.c  sprites.h
next/src/: build_info.h.in  game.c  highscores.c  highscores.h  hud.c  hud.h  level.c  level.h  level_selection.c  level_selection.h  menu.c  menu.h  next.c  player.c  player.h  sprite_renderer.c
snake/: CMakeLists.txt
snake/src/: collision.h  game.c  game.h  highscores.c  hud.c  hud.h  level.c  level.h  player.c  player.h  renderer.c  renderer.h  shader.c  shader.h  snake.c  text_renderer.c  text_renderer.h  util.c  util.h
snake/src/shaders/: generic_object.vs  text.fs
